
Current Development Version: WSPR-4.0


2014-04-09 Greg Beam <ki7mt@yahoo.com>

* Fix type in configure.ac
* Added some updates to man pages


2014-04-07 Greg Beam <ki7mt@yahoo.com>

* Cleaned up paramater expansion
* Removed fftw.h search, header file not used
* minor edits to autogen.sh
* updated distclean
* minor edits to INSTALL.txt


2014-04-07 Greg Beam <ki7mt@yahoo.com>

* Added autogen.sh
* Removed config file as autoconf -i generates it
* Updated INSTALL.txt
* Updated make distclean fmt generated files
* Updated man pages


2014-04-06 (2) Greg Beam <ki7mt@yahoo.com>

* Moved FFTW3 and Samplerate functions to aclocal.m4
* Added independent LDFLAG addidtions for each libreary
  as they may be in different locations
* removed Makfile, as it's made with ./configure
* To Build:

	./autoconf -i
	./configure
	./make

2014-04-06 (1) Greg Beam <ki7mt@yahoo.com>

* Added WSPR0 Manpage
* Updated WSPR manpage, now builds with AsciiDoc
* Still need content updates for WSPR Manpage source file
* Added both compiled Manpages to SVN + WSPR0 Source File
* WSPR0 transfer from text file needs verification / review

2014-04-05 (2) Greg Beam <ki7mt@yahoo.com>

* added conditional LDFLAGS to configure.ac
* updated the audio message
* added @LDFLAGS@ to makefile.in as it was missing.
* minor text edits here and there

2014-04-05 (1) Greg Beam <ki7mt@yahoo.com>

* Removed AX_ISC_POSIX, was for obsolete hardware
* Combined Makefile.in ieq statments
* Added AC_CANONICAL_HOST for $host_os
* Removed duplicate flags from Makefile.in


2014-04-04 (2)  Greg Beam <ki7mt@yahoo.com>

* ran autoscan and updated configure.ac
* Added FFTW AC_CHECK_LIB
* Added Samplerate AC_CHECK_LIB
* Updated header checks
* Removed uneeded header check
* Updated distclean to include files / folders created at runtime
* Added MALLOC and FUNCTONS checks
* Added conditional -fPIC -m64 for Darwin, -fPIC for else.
* Built and ran from clean build, no errors, only a few unused var warnings.

